Cambios con el motor ejs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@
     font-family: 'poppins',sans-serif;
 }
 body.loginbody{
-    background: #a6c5c0;
+    background-color: #FFFFFF;
     overflow: hidden;
 }
 .container{
