--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,7 +46,7 @@
       <article><a href="/Ice-Short"><img src="/img/img3.png" alt="product3"><p class="nameemp">Heavenly</p><p class="namecloth">Ice Short</p><p class="price">$1550</p></a></article>
       <article><a href="/Retro-Shirt"><img src="/img/img4.png" alt="product4"><p class="nameemp">Heavenly</p><p class="namecloth">Retro Shirt</p><p class="price">$1800</p></a></article>
       <article><a href="/Black&White-Camo"><img src="/img/img5.png" alt="product5"><p class="nameemp">Heavenly</p><p class="namecloth">Black&White Camo</p><p class="price">$2000</p></a></article>
-      <article><a href="/Shark-Jumper.html"><img src="/img/img6.png" alt="product6"><p class="nameemp">Heavenly</p><p class="namecloth">Shark Jumper</p><p class="price">$3250</p></a></article>
+      <article><a href="/Shark-Jumper"><img src="/img/img6.png" alt="product6"><p class="nameemp">Heavenly</p><p class="namecloth">Shark Jumper</p><p class="price">$3250</p></a></article>
     </section>
     <footer></footer>
 </body>
