--- a/views/home.html
+++ b/views/home.html
@@ -11,16 +11,7 @@
     <title>Document</title>
 </head>
 <body class="homebody">
-  <header class="headerhome">
-  <a href="/"><p class="logo">HEAVENLY</p></a>
- <form class="searchbar">
-    <input name="searchbarhome" type="text" class="searchbarhome" placeholder="Buscá por producto, marca, categoría ..."></form>
-    <button type="submit"></button>
-    </form>
-    <a class="searchiconhome"><i class="fas fa-search"></i></a>
-    <a class="solidbarhome"><i class="fas fa-bars"></i></a>
-   <div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/register">/Register</a> <a class="shopiconhome" href="/carrito"><i class="fas fa-shopping-basket"></i></a></div>
-  </header>
+ <%- include('.partials/header.html') %>
     <section class="sliderhome"></section>
     <div class="containersliderhome">
       <ul class="sliderhome">
@@ -46,7 +37,7 @@
       <article><a href="/Ice-Short"><img src="/img/img3.png" alt="product3"><p class="nameemp">Heavenly</p><p class="namecloth">Ice Short</p><p class="price">$1550</p></a></article>
       <article><a href="/Retro-Shirt"><img src="/img/img4.png" alt="product4"><p class="nameemp">Heavenly</p><p class="namecloth">Retro Shirt</p><p class="price">$1800</p></a></article>
       <article><a href="/Black&White-Camo"><img src="/img/img5.png" alt="product5"><p class="nameemp">Heavenly</p><p class="namecloth">Black&White Camo</p><p class="price">$2000</p></a></article>
-      <article><a href="/Shark-Jumper.html"><img src="/img/img6.png" alt="product6"><p class="nameemp">Heavenly</p><p class="namecloth">Shark Jumper</p><p class="price">$3250</p></a></article>
+      <article><a href="/Shark-Jumper"><img src="/img/img6.png" alt="product6"><p class="nameemp">Heavenly</p><p class="namecloth">Shark Jumper</p><p class="price">$3250</p></a></article>
     </section>
     <footer></footer>
 </body>
