Se crea el controlador y las vistas

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,7 +41,7 @@
       </ul>
     </div>
     <section class="productoshome">
-      <article><a href="/Black-Camo"><img src="/img/img1.png" alt="product1"><p class="nameemp">Heavenly</p><p class="namecloth"></p>Black Camo<p class="price">$1750</p></a></article>
+      <article><a href="/productodetalle?id=1"><img src="/img/img1.png" alt="product1"><p class="nameemp">Heavenly</p><p class="namecloth"></p>Black Camo<p class="price">$1750</p></a></article>
       <article><a href="/Monster-Trouser"><img src="/img/img2.png" alt="product2"><p class="nameemp">Heavenly</p><p class="namecloth">Monster Trouser</p><p class="price">$2000</p></a></article>
       <article><a href="/Ice-Short"><img src="/img/img3.png" alt="product3"><p class="nameemp">Heavenly</p><p class="namecloth">Ice Short</p><p class="price">$1550</p></a></article>
       <article><a href="/Retro-Shirt"><img src="/img/img4.png" alt="product4"><p class="nameemp">Heavenly</p><p class="namecloth">Retro Shirt</p><p class="price">$1800</p></a></article>
