--- a/views/productodetalle.ejs
+++ b/views/productodetalle.ejs
@@ -4,23 +4,21 @@
 	<title>Product Details</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/Productdetailstyles.css">
+	<link rel="stylesheet" href="/css/Productdetailstyles.css">
 </head>
 <body>
 	<div id="content-wrapper">
 		<div class="column">
-			<img id=featured src="img/black_camo_1.jpg">
-		</div>
-
-		<div class="column">
-			<h1> <%= productos.nombre%> </h1>
-			<hr>
-			<h3></h3>
-
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-
+			<img id=featured src=<%=productos.url%>>
+		</div>	
+		<div class="otros">
+			<h1> <%= productos.nombre %> </h1>
+			<h3>$<%=productos.precio %></h3>			
+			<p><%=productos.descripcion%></p>
+	
 			<input value=1 type="number">
 			<a class="btn btn-dark" href="#">Add to Cart</a>
+
 		</div>
 
 	</div>
