--- a/public/css/Productdetailstyles.css
+++ b/public/css/Productdetailstyles.css
@@ -2,14 +2,7 @@ body{
 	padding-top: 25vh;
 }
 
-#content-wrapper{
-	display: flex;	
-	flex-direction: column;
-	width: 100%;
-	border: 1px solid black;
-	justify-content: center;
-	align-items: center;
-}
+
 #featured{
 	max-width: 300px;
 	max-height: 600px;
@@ -24,9 +17,19 @@ body{
 .otros h1,h3,p {
 	width: fit-content;
 }
+@media (max-width: 360px){
+	#content-wrapper{
+		display: flex;	
+		flex-direction: column;
+		width: 100%;
+		border: 1px solid black;
+		justify-content: center;
+		align-items: center;
+	}
+}
 
 @media (min-width: 361px){
-	#content-wrapper{
+	#content-wrapper{		
 		display: flex;	
 		border: 1px solid black;
 		justify-content: center;
