--- a/public/css/registerstyle.css
+++ b/public/css/registerstyle.css
@@ -10,7 +10,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #4070f4;
+  background: url(https://www.yonar.com.ar/images/3.png);
 }
 .wrapper{
   position: relative;
@@ -35,7 +35,7 @@ body{
   height: 3px;
   width: 28px;
   border-radius: 12px;
-  background: #4070f4;
+  background: #b6c2c0;
 }
 .wrapper form{
   margin-top: 30px;
@@ -59,7 +59,7 @@ form .input-box input{
 }
 .input-box input:focus,
 .input-box input:valid{
-  border-color: #4070f4;
+  border-color: #b6c2c0;
 }
 form .policy{
   display: flex;
@@ -75,11 +75,11 @@ form h3{
   color: #fff;
   letter-spacing: 1px;
   border: none;
-  background: #4070f4;
+  background: #b6c2c0;
   cursor: pointer;
 }
 .input-box.button input:hover{
-  background: #0e4bf1;
+  background: #b6c2c0;
 }
 form .text h3{
  color: #333;
@@ -87,7 +87,7 @@ form .text h3{
  text-align: center;
 }
 form .text h3 a{
-  color: #4070f4;
+  color: #b6c2c0;
   text-decoration: none;
 }
 form .text h3 a:hover{
