--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,21 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kaisei+Opti&family=Oswald&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-        <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body class="homebody">
-  <header class="headerhome">
-  <a href="/"><p class="logo">HEAVENLY</p></a>
- <form class="searchbar">
+  <form class="searchbar">
     <input name="searchbarhome" type="text" class="searchbarhome" placeholder="Buscá por producto, marca, categoría ..."></form>
     <button type="submit"></button>
-    </form>
-    <a class="searchiconhome"><i class="fas fa-search"></i></a>
-    <a class="solidbarhome"><i class="fas fa-bars"></i></a>
-   <div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/register">/Register</a> <a class="shopiconhome" href="/carrito"><i class="fas fa-shopping-basket"></i></a></div>
-  </header>
+  </form>
+  <%- include ('./partials/head') %>
+<div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/register">/Register</a> <a class="shopiconhome" href="/carrito"><i class="fas fa-shopping-basket"></i></a></div>
+
     <section class="sliderhome"></section>
     <div class="containersliderhome">
       <ul class="sliderhome">
@@ -42,11 +39,11 @@
     </div>
     <section class="productoshome">
       <article><a href="/productodetalle/1"><img src="/img/img1.png" alt="product1"><p class="nameemp">Heavenly</p><p class="namecloth"></p>Black Camo<p class="price">$1750</p></a></article>
-      <article><a href="/Monster-Trouser"><img src="/img/img2.png" alt="product2"><p class="nameemp">Heavenly</p><p class="namecloth">Monster Trouser</p><p class="price">$2000</p></a></article>
-      <article><a href="/Ice-Short"><img src="/img/img3.png" alt="product3"><p class="nameemp">Heavenly</p><p class="namecloth">Ice Short</p><p class="price">$1550</p></a></article>
-      <article><a href="/Retro-Shirt"><img src="/img/img4.png" alt="product4"><p class="nameemp">Heavenly</p><p class="namecloth">Retro Shirt</p><p class="price">$1800</p></a></article>
-      <article><a href="/Black&White-Camo"><img src="/img/img5.png" alt="product5"><p class="nameemp">Heavenly</p><p class="namecloth">Black&White Camo</p><p class="price">$2000</p></a></article>
-      <article><a href="/Shark-Jumper"><img src="/img/img6.png" alt="product6"><p class="nameemp">Heavenly</p><p class="namecloth">Shark Jumper</p><p class="price">$3250</p></a></article>
+      <article><a href="/productodetalle/2"><img src="/img/img2.png" alt="product2"><p class="nameemp">Heavenly</p><p class="namecloth">Monster Trouser</p><p class="price">$2000</p></a></article>
+      <article><a href="/productodetalle/3"><img src="/img/img3.png" alt="product3"><p class="nameemp">Heavenly</p><p class="namecloth">Ice Short</p><p class="price">$1550</p></a></article>
+      <article><a href="/productodetalle/4"><img src="/img/img4.png" alt="product4"><p class="nameemp">Heavenly</p><p class="namecloth">Retro Shirt</p><p class="price">$1800</p></a></article>
+      <article><a href="/productodetalle/5"><img src="/img/img5.png" alt="product5"><p class="nameemp">Heavenly</p><p class="namecloth">Black&White Camo</p><p class="price">$2000</p></a></article>
+      <article><a href="/productodetalle/6"><img src="/img/img6.png" alt="product6"><p class="nameemp">Heavenly</p><p class="namecloth">Shark Jumper</p><p class="price">$3250</p></a></article>
     </section>
     <footer></footer>
 </body>
