--- a/views/crearProducto.ejs
+++ b/views/crearProducto.ejs
@@ -19,8 +19,8 @@
 <body>  
     <%- include ('./partials/head') %>  
     <main class="register">
-        <form action="/" method="POST">
-            <div class="form">
+        <form class="form" action="/crearProducto" method="POST">
+            
                 <h1 class="">Crear Producto</h1>
                     <div class="grupo">
                         <input type="text" name="name" id="name" required><span class="barra"></span>
@@ -53,7 +53,7 @@
                         <button class="borrar" type="submit">Borrar </button>
                     </div>
             
-        </div>
+        
         </form>
     </main>
     <footer>
