--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,9 @@ body.loginbody{
     background: url(https://www.yonar.com.ar/images/3.png);
     overflow: hidden;
 }
+.productoshome p{
+    width: 100%;
+}
 .container{
 max-width: 440px;
 padding: 0 20px;
