--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
     <section class="productoshome">
       <% for(let i=1; i < productos.length; i++) {  %>
         <article>
-          <a href=<%=`/productodetalle/${productos[i]}`%>>
+          <a href=<%=`/productodetalle/${i}`%>>
           <img src=<%=`${productos[i].url}`%> alt=<%=`${productos[i].nombre}`%>>
           <p class="nameemp"><%=`${productos[i].nombre}`%></p><p class="namecloth">
           </p><%=`${productos[i].nombre}`%><p class="price">$<%= productos[i].precio %></p>
