new: Creacion nuevos productos.
Se crean los nuevos productos, pero aun falta que cargue la imagen

--- a/views/crearProducto.ejs
+++ b/views/crearProducto.ejs
@@ -23,16 +23,16 @@
             
                 <h1 class="">Crear Producto</h1>
                     <div class="grupo">
-                        <input type="text" name="name" id="name" required><span class="barra"></span>
+                        <input type="text" name="nombre" id="name" required><span class="barra"></span>
                         <label for="">Nombre del producto</label>
                     </div>
                     <div class="grupo">
-                        <input type="text" name="description" id="description" required><span class="barra"></span>
+                        <input type="text" name="descripcion" id="description" required><span class="barra"></span>
                         <label for="">Descripción</label>
                     </div>
                     <div class="grupo">
                         <h4>Elegí una imagen</h4>
-                            <input type="file" name="image" id="image" required><span class="barra"></span>
+                            <input type="file" name="url" id="image" required><span class="barra"></span>
                     </div>
                     <div class="grupo">
                         <input type="text" name="category" id="category" required><span class="barra"></span>
@@ -43,7 +43,7 @@
                         <label for="">Talles</label>
                     </div>
                     <div class="grupo">
-                        <input type="text" name="price" id="price" required><span class="barra"></span>
+                        <input type="text" name="precio" id="price" required><span class="barra"></span>
                         <label for="">Precio</label>
                     </div>
                     <div>
