fix: Guardando con multer
Todavia falta que la imprima

--- a/views/crearProducto.ejs
+++ b/views/crearProducto.ejs
@@ -19,7 +19,7 @@
 <body>  
     <%- include ('./partials/head') %>  
     <main class="register">
-        <form class="form" action="/crearProducto" method="POST">
+        <form class="form" action="/crearProducto" method="POST" enctype="multipart/form-data">
             
                 <h1 class="">Crear Producto</h1>
                     <div class="grupo">
