new: Edicion de productos

--- a/views/productodetalle.ejs
+++ b/views/productodetalle.ejs
@@ -18,7 +18,9 @@
 	
 			<input value=1 type="number">
 			<a class="btn btn-dark" href="#">Add to Cart</a>
-
+			<form action="/edicion/<%=id%>" method="get">
+				<button class="enviar" type="submit">Editar </button>
+			</form>
 		</div>
 
 	</div>
