--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,7 +43,7 @@
           <a href=<%=`/productodetalle/${i}`%>>
           <img src=<%=`${productos[i].url}`%> alt=<%=`${productos[i].nombre}`%>>
           <p class="nameemp"><%=`${productos[i].nombre}`%></p><p class="namecloth">
-          </p><%=`${productos[i].nombre}`%><p class="price">$<%= productos[i].precio %></p>
+          <%=`${productos[i].nombre}`%></p><p class="price">$<%= productos[i].precio %></p>
         </a>
       </article>
       <% } %>     
