--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,3 +8,4 @@
       <a class="solidbarhome"><i class="fas fa-bars"></i></a>
      <div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/register">/Register</a> <a class="shopiconhome" href="/carrito"><i class="fas fa-shopping-basket"></i></a></div>
     </header>
+    <div><p class="categoryofcloth">Categorías</p></div>
