--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,9 @@
 </head>
 
 <body class="loginbody">
-    <%- include ('./partials/head') %>
+    <header class="headerhome">
+<p class="logologin"><a href="/" class="logologin">HEAVENLY</a></p>
+    </header>
     <div class="container">
         <div class="wrapper">
             <div class="title"><span>Login</span></div>
