--- a/public/css/registerstyle.css
+++ b/public/css/registerstyle.css
@@ -3,11 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'poppins',sans-serif;
 }
 body{
-  min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background: url(https://www.yonar.com.ar/images/3.png);
@@ -40,6 +40,9 @@ body{
 .wrapper form{
   margin-top: 30px;
 }
+div.input-box input.Input-submit:hover{
+  background-color:#4ab9ff ;
+}
 .wrapper form .input-box{
   height: 52px;
   margin: 18px 0;
@@ -60,6 +63,21 @@ form .input-box input{
 .input-box input:focus,
 .input-box input:valid{
   border-color: #b6c2c0;
+}
+
+header.headerhome{
+  border-bottom: solid 1px grey;
+}
+a.logologin{
+  font-size: 5vw;
+  position: relative;
+  left: 42.5vw;
+  top: 0vh;
+  z-index: 1;
+  width: 10vw;
+  color: black;
+  text-decoration: underline;
+  font-family: Bebas Neue, sans-serif;
 }
 form .policy{
   display: flex;
