--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!-- Coding by CodingLab | www.codinglabweb.com-->
 <html lang="en" dir="ltr">
@@ -11,9 +10,10 @@
    </head>
 
 <body>
+<%- include ('./partials/head') %> 
   <div class="wrapper">
     <h2>Registro</h2>
-    <form action="#">
+    <form action="/" method="POST">
       <div class="input-box">
         <input type="text" placeholder="Ingresar Nombre" required>
       </div>
@@ -28,10 +28,10 @@
       </div>
       <div class="policy">
         <input type="checkbox" required>
-        <h3>Aceptar terminos y condiciones</h3>
+        <h3>Aceptar términos y condiciones</h3>
       </div>
       <div class="input-box button">
-        <input type="Submit" value="Registrarse ahora">
+        <input class="Input-submit" type="Submit" value="Registrarse ahora">
       </div>
       <div class="text">
         <h3>Ya tenes una cuenta creada? <a href="#">Ingresa</a></h3>
