--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,7 @@
                 <div class="row button">
                     <input type="submit" value="Entrar">
                 </div>
-                <div class="signup-link">¿No estas registrado? <a href="#">Registrarse</a></div>
+                <div class="signup-link">¿No está registrado? <a href="#">Registrarse</a></div>
             </form>
         </div>
     </div>
