--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,13 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kaisei+Opti&family=Oswald&display=swap" rel="stylesheet">
     <!--<title> Registration or Sign Up form in HTML CSS | CodingLab </title>-->
     <link rel="stylesheet" href="css/registerstyle.css">
     
    </head>
 
 <body>
-<%- include ('./partials/head') %> 
+  <header class="headerhome">
+    <p class="logologin"><a href="/" class="logologin">HEAVENLY</a></p>
+  </header>
   <div class="wrapper">
     <h2>Registro</h2>
     <form action="/" method="POST">
