--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
     <button type="submit"></button>
   </form>
   <%- include ('./partials/head') %>
-<div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/register">/Register</a> <a class="shopiconhome" href="/carrito"><i class="fas fa-shopping-basket"></i></a></div>
+<div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/crearUsuario">/Register</a> <a class="shopiconhome" href="/carrito"><i class="fas fa-shopping-basket"></i></a></div>
 
     <section class="sliderhome"></section>
     <div class="containersliderhome">
