--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,9 @@
     <input name="searchbarhome" type="text" class="searchbarhome" placeholder="Buscá por producto, marca, categoría ..."></form>
     <button type="submit"></button>
   </form>
-  <%- include ('./partials/head') %>
+  <header class="headerhome">
+    <p class="logohome"><a href="/">HEAVENLY</a></p>
+</header>
 <div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/register">/Register</a> <a class="shopiconhome" href="/carrito"><i class="fas fa-shopping-basket"></i></a></div>
 
     <section class="sliderhome"></section>
