--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,3 @@
 <header class="headerhome">
-    <a href="/"><p class="logo">HEAVENLY</p></a>
+    <p class="logo"><a href="/">HEAVENLY</a></p>
 </header>
